syntax = "proto3";

option go_package = ".";

package partition;

service Partition {
  rpc split (File) returns (FilePartition) {}
  rpc reconstruct (FileDesc) returns (FilePartition) {}
}

message File {
  string name = 1;
  int64 size = 2;
  int64 chunkSize = 4;
  int32 nbReplicas = 3;
}

message FilePartition {
  string fileUuid = 1;
  repeated Chunk chunks = 2;
}

message Chunk {
  string name = 1;
  int64 offset = 2;
  int64 size = 3;
  string sendTo = 4;
  repeated string replicaChain = 5;
}

message FileDesc {
  string filename = 1;
}