syntax = "proto3";

option go_package = ".";

package storage;

service Storage {
  rpc Store (Chunk) returns (StoreResponse) {}
}

message Chunk {
  string unique_name = 1;
  bytes data = 2;
  repeated string locations = 3;
}

message StoreResponse {
  Status status = 1;
  string message = 2;
}

enum Status {
  STATUS_OK = 0;
  STATUS_ERROR = 1;
}